--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,3 +1,11 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+  @font-face {
+    font-family: "Satoshi";
+    src: url("/fonts/Satoshi-Black.woff") format("woff"),
+      url("/fonts/Satoshi-Black.woff2") format("woff2");
+  }
+}
