--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -5,7 +5,11 @@
 @layer base {
   @font-face {
     font-family: "Satoshi";
-    src: url("/fonts/Satoshi-Black.woff") format("woff"),
-      url("/fonts/Satoshi-Black.woff2") format("woff2");
+    src: url("/fonts/Satoshi-Variable.woff2") format("woff2"),
+      url("/fonts/Satoshi-Variable.woff") format("woff"),
+      url("/fonts/Satoshi-Variable.ttf") format("truetype");
+    font-weight: 300 900;
+    font-display: swap;
+    font-style: normal;
   }
 }
